# mssmt-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: insertion.rs  proof.rs
examples/: basic_usage.rs  compact_tree.rs  custom_hasher.rs
src/: compact_tree.rs  db.rs  empty_tree.rs  error.rs  lib.rs  memory_db.rs  node.rs  proof.rs  tree.rs
src/db/: db.rs  memory.rs  mod.rs
src/node/: branch.rs  compact.rs  computed.rs  empty.rs  leaf.rs  mod.rs
src/tests/: mod.rs  sha512.rs  tree.rs
src/tests/taproot/: mod.rs  types.rs
src/tree/: compact.rs  empty.rs  mod.rs  regular.rs
