[package]
name = "merkle-sum-sparse-tree"
version = "0.1.0"
edition = "2021"

[features]
default = ["multi-thread"]
multi-thread = []

[dependencies]
hex = "0.4.3"
sha2 = "0.10.8"
typenum = "1.17.0"

[dev-dependencies]
hex-literal = "0.4.1"

[[example]]
name = "basic_usage"

[[example]]
name = "compact_tree"

[[example]]
name = "custom_hasher"
