[package]
name = "mssmt"
version = "0.0.6"
edition = "2021"
authors = ["0xLucqs"]
description = "A Rust implementation of the Merkle Sum Sparse Merkle Tree (MSSMT)"
license = "MIT"
repository = "https://github.com/keep-starknet-strange/mssmt-rs"
readme = "README.md"
keywords = ["merkle", "tree", "cryptography", "bitcoin"]
categories = ["cryptography", "data-structures"]

[features]
default = ["multi-thread"]
multi-thread = []

[dependencies]
bitvec = "1.0.1"
hex = "0.4.3"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "basic_usage"

[[example]]
name = "compact_tree"

[[example]]
name = "custom_hasher"

[[bench]]
name = "insertion"
harness = false
path = "bench/insertion.rs"

[[bench]]
name = "proof"
harness = false
path = "bench/proof.rs"
